--- a/index.html
+++ b/index.html
@@ -5,10 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Unicorn Power</title>
-    <link rel="stylesheet" href="./css/fonts.css" />
+
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
+    <style>
+      @font-face {
+        font-family: "Nekst-Regular";
+        src: url("../fonts/Nekst-Regular.eot");
+        src: local("☺"), url("../fonts/Nekst-Regular.woff") format("woff"),
+          url("../fonts/Nekst-Regular.ttf") format("truetype"),
+          url("../fonts/Nekst-Regular.svg") format("svg");
+        font-weight: 400;
+        font-style: normal;
+      }
+    </style>
     <main class="main">
       <section class="modal">
         <div class="container modal__container">
